# bitcoin-multisig-wallet

./: .env.example  .gitignore  Cargo.toml  README.md
src/: beacon.rs  keygen.rs  lib.rs  main.rs  utilities.rs  wallet.rs
tests/: wallet_tests.rs
