[package]
name = "bitcoin-multisig-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = { version = "0.28.0", features = ["all-keys"] }
bitcoin = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
