[package]
name = "bitcoin-multisig-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk_chain = "0.5"
bdk_file_store = "0.5"
bdk_wallet = "1.2.0"
bitcoin = { version = "0.30", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
